# bucface

./: Cargo.toml  b
bucface_client/: Cargo.toml
bucface_client/src/: app.rs  input.rs  logging.rs  main.rs  ui.rs
bucface_client/src/net/: mod.rs  sync.rs  ws_client.rs  ws_receiver.rs  ws_sender.rs
bucface_client/src/ui/: entry.rs  entry_block.rs  log_block.rs  log_popup.rs  log_ui.rs  main_window.rs  mod.rs
bucface_server/: Cargo.toml
bucface_server/src/: app.rs  db.rs  events.rs  main.rs  other_pages.rs  websocket.rs
bucface_utils/: Cargo.toml
bucface_utils/src/: lib.rs  ws.rs
