[package]
name = "bucface_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
color-eyre = "0.6.2"
crossterm = "0.27.0"
directories = "5.0.1"
lazy_static = "1.4.0"
ratatui = "0.25.0"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
bucface_utils = { path = "../bucface_utils" }
rmp-serde = "1.1.2"
