[package]
name = "bucface_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26.1"
egui = "0.26.1"
env_logger = "0.11.1"
log = "0.4.20"
reqwest = "0.11.24"
rmp-serde = "1.1.2"
serde = "1.0.196"
tokio = "1.36.0"
bucface_utils = { path = "../bucface_utils" }
chrono = "0.4.34"
