[package]
name = "bucface_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
env_logger = "0.11.1"
log = "0.4.20"
surrealdb = "1.1.1"
bucface_utils = { path = "../bucface_utils", features = ["actix"] }
serde = "1.0.196"
chrono = "0.4.33"
rmp-serde = "1.1.2"
futures = "0.3.30"
rand = "0.8.5"
tonic = "0.10.2"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
futures-util = "0.3.30"
