[package]
name = "bucface_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.1", optional = true }
chrono = "0.4.33"
rand = "0.8.5"
rmp-serde = "1.1.2"
serde = "1.0.196"

[features]
actix = ["dep:actix-web"]
