[package]
name = "bucface_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
futures-util = "0.3.30"
rand = "0.8.5"
rmp-serde = "1.1.2"
serde = "1.0.196"
tokio = "1.36.0"
tokio-tungstenite = "0.21.0"
